--- a/pages/account.html
+++ b/pages/account.html
@@ -117,7 +117,7 @@
                 <div class="account-list-txt me-auto">會員等級</div>
                 <img src="../assets/img/arrow-right.svg" alt="">
               </a>
-              <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light " href="game_record_history.html">
+              <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light " href="promotion_history.html">
                 <img class="account-list-icon me-2" src="../assets/img/icon-promo.png" alt="">
                 <div class="account-list-txt me-auto">優惠專區</div>
                 <img src="../assets/img/arrow-right.svg" alt="">
