--- a/pages/promotion_history.html
+++ b/pages/promotion_history.html
@@ -1,217 +1,115 @@
 <!doctype html>
 <html lang="zh-tw">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS -->
-    <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-    <title>HOMIE - 優惠紀錄</title>
-  </head>
-  <body>
-    <!-- title -->
-    <div class="title d-flex container-fluid bg-dark text-white">
-        <a class="col-4 d-block text-white text-decoration-none" href="account.html"><img class="rotateY" src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
-        <div class="col-4 text-nowrap"><h2 class="fs-5 mb-0 text-center">優惠紀錄</h2></div>
-    </div><!-- title end -->
-    <!-- search -->
-    <div class="container border-bottom border-gray">
-        <div class="row align-items-center g-2 pb-2">
-            <div class="col-auto collapseBtn">
-                <button class="accordion-button collapsed btn-gray-dark btn-sm fs-7 rounded-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEvent" aria-expanded="true" aria-controls="collapseEvent">
-                    活動名稱
-                </button>
-            </div>
-            <div class="col-auto collapseBtn">
-                <button class="accordion-button collapsed btn-gray-dark btn-sm fs-7 rounded-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseStatus" aria-expanded="true" aria-controls="collapseStatus">
-                    全部狀態
-                </button>
-            </div>
-            <div class="col-auto collapseBtn">
-                <button class="accordion-button collapsed btn-gray-dark btn-sm fs-7 rounded-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTime" aria-expanded="false" aria-controls="collapseTime">
-                    今日
-                </button>
-            </div>
-        </div>
-    </div>
-    <!-- 搜尋選單 -->
-    <div class="container py-2 border-bottom border-gray mb-2" id="accordion">
-        <div class="row align-items-center fs-7">
-            <div class="col-auto">搜尋日期：</div>
-            <div class="col"><input class="form-control form-control-sm bg-transparent text-primary fs-7" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example" value="2020/10/10" readonly></div>
-            <div class="col-auto text-primary"> ~ </div>
-            <div class="col"><input class="form-control form-control-sm bg-transparent text-primary fs-7" type="text" placeholder=".form-control-sm" aria-label=".form-control-sm example" value="2020/11/10" readonly></div>
-        </div>
-        <!-- 優惠活動名稱 -->
-        <div class="collapse my-2" id="collapseEvent" data-bs-parent="#accordion">
-            <div class="d-flex flex-column px-2" role="group" aria-label="Basic radio toggle button group">
-                <div>
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio_1" autocomplete="off" checked>
-                    <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_1">
-                        <div>活動名稱A</div>
-                        <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
-                    </label>
-                </div>
-                <div>
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio_2" autocomplete="off">
-                    <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_2">
-                        <div>活動名稱B</div>
-                        <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
-                    </label>
-                </div>
-                <div>
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio_3" autocomplete="off">
-                    <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_3">
-                        <div>活動名稱C</div>
-                        <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
-                    </label>
-                </div>
-                <div>
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio_4" autocomplete="off">
-                    <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_4">
-                        <div>活動名稱D</div>
-                        <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
-                    </label>
-                </div>
-                <div>
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio_5" autocomplete="off">
-                    <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_5">
-                        <div>活動名稱E</div>
-                        <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
-                    </label>
-                </div>
-                <div>
-                    <input type="radio" class="btn-check" name="btnradio" id="btnradio_6" autocomplete="off">
-                    <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_6">
-                        <div>活動名稱F</div>
-                        <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
-                    </label>
-                </div>
-            </div>
-        </div>
-        <!-- 優惠活動名稱 end-->
-        <!-- 狀態 -->
-        <div class="collapse my-2" id="collapseStatus" data-bs-parent="#accordion">
-            <div class="row g-2">
-                <div class="col-3 d-grid"><button class="btn btn-outline-gray text-nowrap" type="button">全部</button></div>
-                <div class="col-3 d-grid"><button class="btn btn-outline-gray text-nowrap" type="button">審核中</button></div>
-                <div class="col-3 d-grid"><button class="btn btn-outline-gray text-nowrap" type="button">成功</button></div>
-                <div class="col-3 d-grid"><button class="btn btn-outline-gray text-nowrap" type="button">不通過</button></div>
-            </div>
-        </div>
-        <!-- 狀態 end-->
-        <!-- 日期選擇 -->
-        <div class="collapse my-2" id="collapseTime" data-bs-parent="#accordion">
-            <div class="row row-cols-4 g-2">
-                <div class="d-grid"><button class="btn btn-outline-gray" type="button">今日</button></div>
-                <div class="d-grid"><button class="btn btn-outline-gray" type="button">昨日</button></div>
-                <div class="d-grid"><button class="btn btn-outline-gray" type="button">本週</button></div>
-                <div class="d-grid"><button class="btn btn-outline-gray" type="button">上週</button></div>
-                <div class="d-grid"><button class="btn btn-outline-gray" type="button">本月</button></div>
-                <div class="d-grid"><button class="btn btn-outline-gray" type="button">上月</button></div>
-                <div class="d-grid"><button class="btn btn-outline-gray" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCustomTime" aria-expanded="false" aria-controls="collapseCustomTime">自訂義</button></div>
-            </div>
-        </div>
-        <!-- 自訂時間 -->
-        <div class="collapse my-2" id="collapseCustomTime">
-            <div class="mb-3">
-                <label for="startTime" class="form-label">開始時間</label>
-                <input type="date" class="form-control" id="startTime" placeholder="請選擇開始時間">
-                <label for="endTime" class="form-label">結束時間</label>
-                <input type="date" class="form-control" id="endTime" placeholder="請選擇結束時間">
-            </div>
-            <div class="d-grid"><button class="btn btn-primary" type="button">搜尋</button></div>
-        </div>
-        <!-- 自訂時間 end-->
-        <!-- 日期選擇 end-->
-    </div>
-    <!-- 搜尋選單 end-->
-    <!-- search end-->
-    <div class="container">
-        <!-- list -->
-        <a class="d-block text-decoration-none text-white card bg-secondary mb-1" href="javascript:void(0)">
-            <div class="card-body py-2 d-flex flex-row px-3 position-relative">
-                <div class="col-auto d-flex flex-column">
-                    <img class="position-absolute start-0 translate-middle title-decoration" src="../assets/img/title_decorate.svg" alt="">
-                    <div class="fs-7">新會員註冊就送688</div>
-                    <div class="text-muted fs-8 mt-1"><span>建立時間：</span><span>03-29 18:33:24</span></div>
-                    <div class="text-success fs-7 mt-2">成功</div>
-                </div>
-                <div class="col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
-                    <div class="fs-8 text-muted">紅利點數</div>
-                    <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
-                </div>
-            </div>
-        </a>
-        <a class="d-block text-decoration-none text-white card bg-secondary mb-1" href="javascript:void(0)">
-            <div class="card-body py-2 d-flex flex-row px-3 position-relative">
-                <div class="col-auto d-flex flex-column">
-                    <img class="position-absolute start-0 translate-middle title-decoration" src="../assets/img/title_decorate.svg" alt="">
-                    <div class="fs-7">新會員註冊就送688</div>
-                    <div class="text-muted fs-8 mt-1"><span>建立時間：</span><span>03-29 18:33:24</span></div>
-                    <div class="text-success fs-7 mt-2">成功</div>
-                </div>
-                <div class="col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
-                    <div class="fs-8 text-muted">紅利點數</div>
-                    <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
-                </div>
-            </div>
-        </a>
-        <a class="d-block text-decoration-none text-white card bg-secondary mb-1" href="javascript:void(0)">
-            <div class="card-body py-2 d-flex flex-row px-3 position-relative">
-                <div class="col-auto d-flex flex-column">
-                    <img class="position-absolute start-0 translate-middle title-decoration" src="../assets/img/title_decorate.svg" alt="">
-                    <div class="fs-7">新會員註冊就送688</div>
-                    <div class="text-muted fs-8 mt-1"><span>建立時間：</span><span>03-29 18:33:24</span></div>
-                    <div class="text-danger fs-7 mt-2">不通過</div>
-                </div>
-                <div class="col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
-                    <div class="fs-8 text-muted">紅利點數</div>
-                    <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
-                </div>
-            </div>
-        </a>
-        <a class="d-block text-decoration-none text-white card bg-secondary mb-1" href="javascript:void(0)">
-            <div class="card-body py-2 d-flex flex-row px-3 position-relative">
-                <div class="col-auto d-flex flex-column">
-                    <img class="position-absolute start-0 translate-middle title-decoration" src="../assets/img/title_decorate.svg" alt="">
-                    <div class="fs-7">新會員註冊就送688</div>
-                    <div class="text-muted fs-8 mt-1"><span>建立時間：</span><span>03-29 18:33:24</span></div>
-                    <div class="text-primary fs-7 mt-2">審核中</div>
-                </div>
-                <div class="col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
-                    <div class="fs-8 text-muted">紅利點數</div>
-                    <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
-                </div>
-            </div>
-        </a>
-        <a class="d-block text-decoration-none text-white card bg-secondary mb-1" href="javascript:void(0)">
-            <div class="card-body py-2 d-flex flex-row px-3 position-relative">
-                <div class="col-auto d-flex flex-column">
-                    <img class="position-absolute start-0 translate-middle title-decoration" src="../assets/img/title_decorate.svg" alt="">
-                    <div class="fs-7">新會員註冊就送688</div>
-                    <div class="text-muted fs-8 mt-1"><span>建立時間：</span><span>03-29 18:33:24</span></div>
-                    <div class="text-success fs-7 mt-2">成功</div>
-                </div>
-                <div class="col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
-                    <div class="fs-8 text-muted">紅利點數</div>
-                    <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
-                </div>
-            </div>
-        </a>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <div class="mx-auto my-5 text-center">
-            <img src="../assets/img/no_data.svg" alt="no_data">
-            <div class="mt-3">目前暫無資料</div>
-            <div class="d-grid gap-2 mt-3">
-                <a class="btn btn-primary fs-6" href="account.html">返回</a>
-            </div>
-        </div>
-        <!-- list end-->
-    </div>
-    <div class="mb-2"></div>
+  <!-- CSS -->
+  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <title>HOMIE - 優惠紀錄</title>
+</head>
 
-    <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  </body>
+<body>
+  <!-- title -->
+  <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
+    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <h2 class="fs-6 mb-0 text-center">
+      優惠專區
+    </h2>
+    <div class="icon-right fs-7 text-primary">一鍵領取</div>
+  </div>
+  <!-- title end -->
+  <div class="container mt-2">
+    <!-- list -->
+    <a class="d-block text-decoration-none bg-transparent p-0 card mb-1" href="javascript:void(0)">
+      <div class="card-body p-0 d-flex flex-row px-0 position-relative">
+        <div class="w-100 d-flex flex-column bg-white ps-3 py-2 rounded-3">
+          <div class="deco-icon"></div>
+          <div class="fs-7 text-black">領取期限：03-29 18:33:24</div>
+          <div class="text-black fs-7 mt-1">種類：- -</div>
+          <div class="text-success fs-7 mt-2 fs-8">成功</div>
+        </div>
+        <div
+          class="custom-ticket col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
+          <div class="fs-8 text-muted">金額</div>
+          <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
+        </div>
+      </div>
+    </a>
+    <a class="d-block text-decoration-none bg-transparent p-0 card mb-1" href="javascript:void(0)">
+      <div class="card-body p-0 d-flex flex-row px-0 position-relative">
+        <div class="w-100 d-flex flex-column bg-white ps-3 py-2 rounded-3">
+          <div class="deco-icon"></div>
+          <div class="fs-7 text-black">領取期限：03-29 18:33:24</div>
+          <div class="text-black fs-7 mt-1">種類：- -</div>
+          <div class="text-success fs-7 mt-2 fs-8">成功</div>
+        </div>
+        <div
+          class="custom-ticket col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
+          <div class="fs-8 text-muted">金額</div>
+          <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
+        </div>
+      </div>
+    </a>
+    <a class="d-block text-decoration-none bg-transparent p-0 card mb-1" href="javascript:void(0)">
+      <div class="card-body p-0 d-flex flex-row px-0 position-relative">
+        <div class="w-100 d-flex flex-column bg-white ps-3 py-2 rounded-3">
+          <div class="deco-icon"></div>
+          <div class="fs-7 text-black">領取期限：03-29 18:33:24</div>
+          <div class="text-black fs-7 mt-1">種類：- -</div>
+          <div class="text-danger fs-7 mt-2 fs-8">不通過</div>
+        </div>
+        <div
+          class="custom-ticket col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
+          <div class="fs-8 text-muted">金額</div>
+          <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
+        </div>
+      </div>
+    </a>
+    <a class="d-block text-decoration-none bg-transparent p-0 card mb-1" href="javascript:void(0)">
+      <div class="card-body p-0 d-flex flex-row px-0 position-relative">
+        <div class="w-100 d-flex flex-column bg-white ps-3 py-2 rounded-3">
+          <div class="deco-icon"></div>
+          <div class="fs-7 text-black">領取期限：03-29 18:33:24</div>
+          <div class="text-black fs-7 mt-1">種類：- -</div>
+          <div class="text-muted fs-7 mt-2 fs-8">審核中</div>
+        </div>
+        <div
+          class="custom-ticket col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
+          <div class="fs-8 text-muted">金額</div>
+          <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
+        </div>
+      </div>
+    </a>
+    <a class="d-block text-decoration-none bg-transparent p-0 card mb-1" href="javascript:void(0)">
+      <div class="card-body p-0 d-flex flex-row px-0 position-relative">
+        <div class="w-100 d-flex flex-column bg-white ps-3 py-2 rounded-3">
+          <div class="deco-icon"></div>
+          <div class="fs-7 text-black">領取期限：03-29 18:33:24</div>
+          <div class="text-black fs-7 mt-1">種類：- -</div>
+          <div class="text-success fs-7 mt-2 fs-8">成功</div>
+        </div>
+        <div
+          class="custom-ticket col-auto ms-auto text-center d-flex flex-column justify-content-center align-items-center">
+          <div class="fs-8 text-muted">金額</div>
+          <div class="fs-5 fw-bold lh-1 mt-1">1,238</div>
+        </div>
+      </div>
+    </a>
+
+    <div class="mx-auto my-5 text-center">
+      <img src="../assets/img/no_data.svg" alt="no_data">
+      <div class="d-grid gap-2 mt-3">
+        <a class="btn btn-primary btn-lin fs-6" href="account.html">返回</a>
+      </div>
+    </div>
+    <!-- list end-->
+  </div>
+  <div class="mb-2"></div>
+
+  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
