--- a/pages/game_record_detail.html
+++ b/pages/game_record_detail.html
@@ -1,66 +1,80 @@
 <!doctype html>
 <html lang="zh-tw">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS -->
-    <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-    <title>HOMIE - 遊戲記錄明細</title>
-  </head>
-  <body>
-    <!-- title -->
-    <div class="title d-flex container-fluid bg-dark text-white">
-        <a class="col-4 d-block text-white text-decoration-none" href="game_record_history.html"><img class="rotateY" src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
-        <div class="col-4 text-nowrap"><h2 class="fs-5 mb-0 text-center">遊戲記錄明細</h2></div>
-    </div><!-- title end -->
-    <div class="container">
-        <!-- 資訊 -->
-        <div class="card bg-secondary w-100 mb-2" style="width: 18rem;">
-            <div class="card-body">
-            <form>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">注單號</label>
-                    <div class="col-8">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="10379066862">
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">下注時間</label>
-                    <div class="col-8">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="2022-03-29 18:33:24">
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">投注點數</label>
-                    <div class="col-8">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="1,000">
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-4 text-nowrap px-2 col-form-label fs-7 text-muted">有效投注</label>
-                    <div class="col-8">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="1,000">
-                    </div>
-                </div>
-                <div class="row border-bottom border-gray px-0 mx-1">
-                    <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">輸 / 贏</label>
-                    <div class="col-8">
-                        <input type="number" readonly class="form-control-plaintext text-danger fs-7" id="staticEmail" value="-90">
-                    </div>
-                </div>
-                <div class="row px-0 mx-1">
-                    <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">遊戲名稱</label>
-                    <div class="col-8">
-                        <input type="text" readonly class="form-control-plaintext fs-7" id="staticEmail" value="古怪猴子">
-                    </div>
-                </div>
-            </form>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS -->
+  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <title>HOMIE - 遊戲記錄明細</title>
+</head>
+
+<body>
+  <!-- title -->
+  <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
+    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <h2 class="fs-6 mb-0 text-center">
+      遊戲記錄明細
+    </h2>
+  </div>
+  <!-- title end -->
+  <div class="container pb-5">
+    <!-- 資訊 -->
+    <div class="card mt-3 w-100 mb-5" style="width: 18rem;">
+      <div class="card-body">
+        <form>
+          <div class="row px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">遊戲名稱</label>
+            <div class="col-8">
+              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail" value="古怪猴子">
             </div>
-        </div>
-        <!-- 資訊 end-->
+          </div>
+
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">投注選項</label>
+            <div class="col-8">
+              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail" value="選項">
+            </div>
+          </div>
+
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">投注金額</label>
+            <div class="col-8">
+              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail" value="100">
+            </div>
+          </div>
+
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">投注時間</label>
+            <div class="col-8">
+              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail"
+                value="2022-03-29 18:33:24">
+            </div>
+          </div>
+
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 text-nowrap px-2 col-form-label fs-7 text-muted">有效投注</label>
+            <div class="col-8">
+              <input type="text" disabled class="text-end form-control-plaintext fs-7" id="staticEmail" value="1,000">
+            </div>
+          </div>
+
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-4 px-2 col-form-label fs-7 text-muted">結果</label>
+            <div class="col-8">
+              <input type="number" disabled class="text-end form-control-plaintext text-danger fs-7" id="staticEmail"
+                value="-90">
+            </div>
+          </div>
+
+        </form>
+      </div>
     </div>
-    <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  </body>
+    <!-- 資訊 end-->
+  </div>
+  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
