--- a/pages/account_detail.html
+++ b/pages/account_detail.html
@@ -1,73 +1,81 @@
 <!doctype html>
 <html lang="zh-tw">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS -->
-    <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-    <title>HOMIE - 個人檔案</title>
-  </head>
-  <body>
-      <!-- title -->
-      <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
-        <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
-        <h2 class="fs-6 mb-0 text-center">
-          基本資料
-        </h2>
-      </div>
-      <!-- title end -->
-      <div class="container">
-        <!-- 會員資訊 -->
-        <div class="card w-100 mb-5 mt-2" style="width: 18rem;">
-          <div class="card-body py-1">
-            <form>
-              <div class="row border-bottom border-light px-0 mx-1">
-                <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">會員帳號</label>
-                <div class="col-9">
-                  <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail" value="test0001">
-                </div>
-              </div>
-              <div class="row border-bottom border-light px-0 mx-1">
-                <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">遊戲暱稱</label>
-                <div class="col-9 position-relative">
-                  <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail" value="遊戲暱稱">
-                  <a class="edit fs-14" href="name_edit.html">修改</a>
-                </div>
-              </div>
-              <div class="row border-bottom border-light px-0 mx-1">
-                <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">真實姓名</label>
-                <div class="col-9">
-                  <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail" value="陳小明">
-                </div>
-              </div>
-              <div class="row border-bottom border-light px-0 mx-1">
-                <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">Line ID</label>
-                <div class="col-9 position-relative">
-                  <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail" value="15094804960">
-                </div>
-              </div>
-              <div class="row border-bottom border-light px-0 mx-1">
-                <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">會員密碼</label>
-                <div class="col-9 position-relative">
-                  <input type="password" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail" value="qwer1234">
-                  <a class="edit fs-14" href="password_edit.html">修改</a>
-                </div>
-              </div>
-              <div class="row px-0 mx-1">
-                <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">實名認證</label>
-                <div class="col-9 position-relative">
-                  <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail" value="尚未驗證">
-                  <a class="edit fs-14" href="identity_verify.html">驗證</a>
-                </div>
-              </div>
-            </form>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS -->
+  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <title>HOMIE - 個人檔案</title>
+</head>
+
+<body>
+  <!-- title -->
+  <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
+    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <h2 class="fs-6 mb-0 text-center">
+      基本資料
+    </h2>
+  </div>
+  <!-- title end -->
+  <div class="container mb-5 pb-5">
+    <!-- 會員資訊 -->
+    <div class="card w-100 mb-5 mt-2" style="width: 18rem;">
+      <div class="card-body py-1">
+        <form>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">會員帳號</label>
+            <div class="col-9">
+              <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail"
+                value="test0001">
+            </div>
           </div>
-        </div>
-        <!-- 會員資訊 end-->
-        <!-- 好友推廣 -->
-        <!-- <div class="card bg-secondary w-100" style="width: 18rem;">
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">遊戲暱稱</label>
+            <div class="col-9 position-relative">
+              <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail"
+                value="遊戲暱稱">
+              <!-- <a class="edit fs-14" href="name_edit.html">修改</a> -->
+            </div>
+          </div>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">真實姓名</label>
+            <div class="col-9">
+              <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail"
+                value="陳小明">
+            </div>
+          </div>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">Line ID</label>
+            <div class="col-9 position-relative">
+              <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail"
+                value="15094804960">
+            </div>
+          </div>
+          <div class="row border-bottom border-light px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">會員密碼</label>
+            <div class="col-9 position-relative">
+              <input type="password" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail"
+                value="qwer1234">
+              <a class="edit fs-14" href="password_edit.html">修改</a>
+            </div>
+          </div>
+          <div class="row px-0 mx-1">
+            <label for="staticEmail" class="col-3 px-2 col-form-label fs-14 text-secondary">實名認證</label>
+            <div class="col-9 position-relative">
+              <input type="text" disabled class="form-control-plaintext text-primary fs-14" id="staticEmail"
+                value="尚未驗證">
+              <a class="edit fs-14" href="identity_verify.html">驗證</a>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- 會員資訊 end-->
+    <!-- 好友推廣 -->
+    <!-- <div class="card bg-secondary w-100" style="width: 18rem;">
           <div class="card-header d-flex flex-row justify-content-between pb-1 mt-2">
             <img class="" src="../assets/img/title_decorate_right.svg" alt="">
             <div class="fw-bold">好友推廣</div>
@@ -92,10 +100,11 @@
             <p class="text-center text-secondary fs-8 mt-2 mb-0">長按二維碼保存到相冊</p>
           </div>
         </div> -->
-        <!-- 好友推廣 end-->
-      </div>
-      <div class="mb-2"></div>
+    <!-- 好友推廣 end-->
+  </div>
+  <div class="mb-2"></div>
 
-      <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  </body>
+  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
