feat: Done helper pgae

--- a/pages/account.html
+++ b/pages/account.html
@@ -170,7 +170,7 @@
       <div class=" card w-100" style="width: 18rem;">
         <ul class="list-group list-group-flush">
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
-            href="game_record_history.html">
+            href="helper.html">
             <img class="account-list-icon me-2" src="../assets/img/icon-child.png" alt="">
             <div class="account-list-txt me-auto">新手幫助</div>
             <img src="../assets/img/arrow-right.svg" alt="">
