feat: Done privacy policy page

--- a/pages/account.html
+++ b/pages/account.html
@@ -188,7 +188,7 @@
             <img src="../assets/img/arrow-right.svg" alt="">
           </a>
           <a class="d-block text-secondary text-decoration-none list-group-item d-flex flex-row align-items-center justify-content-start mx-3 border-bottom border-light "
-            href="game_record_history.html">
+            href="privacy_policy.html">
             <img class="account-list-icon me-2" src="../assets/img/icon-pol.png" alt="">
             <div class="account-list-txt me-auto">隱私及政策</div>
             <img src="../assets/img/arrow-right.svg" alt="">
