feat: Done info detail page

--- a/pages/game_record_history.html
+++ b/pages/game_record_history.html
@@ -41,7 +41,7 @@
   <!-- 搜尋選單 -->
   <div class="container py-0 bg-white border-bottom border-light" id="accordion">
     <div class="row align-items-center fs-7 py-2">
-      <div class="col-auto fs-8" style="color: #626262;">搜尋日期 : 2021-05-01 ~ 2021-05-05</div>
+      <div class="col-auto fs-8 text-gray62">搜尋日期 : 2021-05-01 ~ 2021-05-05</div>
     </div>
 
     <!-- 平台選擇 -->
@@ -50,42 +50,42 @@
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_1" autocomplete="off" checked>
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_1">
-            <div style="color:#2E2E2E" class="fs-7">所有平台</div>
+            <div class="text-gray2e fs-7">所有平台</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_2" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_2">
-            <div style="color:#2E2E2E" class="fs-7">真人娛樂</div>
+            <div class="text-gray2e fs-7">真人娛樂</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_3" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_3">
-            <div style="color:#2E2E2E" class="fs-7">棋牌遊戲</div>
+            <div class="text-gray2e fs-7">棋牌遊戲</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_4" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_4">
-            <div style="color:#2E2E2E" class="fs-7">電競</div>
+            <div class="text-gray2e fs-7">電競</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_5" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_5">
-            <div style="color:#2E2E2E" class="fs-7">彩票投注</div>
+            <div class="text-gray2e fs-7">彩票投注</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
         <div>
           <input type="radio" class="btn-check" name="btnradio" id="btnradio_6" autocomplete="off">
           <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio_6">
-            <div style="color:#2E2E2E" class="fs-7">電子遊藝</div>
+            <div class="text-gray2e fs-7">電子遊藝</div>
             <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
           </label>
         </div>
@@ -127,11 +127,11 @@
     <!-- 總計欄位 -->
     <div class="row bg-white py-2 mb-2">
       <div class="col-6 text-center">
-        <div class="fs-8" style="color: #626262;">投注總金額</div>
+        <div class="fs-8 text-gray62">投注總金額</div>
         <div class="fw-bold">99,000.<span class="fs-8">00</span></div>
       </div>
       <div class="col-6 text-center">
-        <div class="fs-8" style="color: #626262;">總結果</div>
+        <div class="fs-8 text-gray62">總結果</div>
         <div class="fw-bold">89,000.<span class="fs-8">00</span></div>
       </div>
 
