--- a/pages/privacy_policy.html
+++ b/pages/privacy_policy.html
@@ -24,7 +24,7 @@
     <!-- 資訊 -->
     <div class="card mt-3 w-100 mb-5" style="width: 18rem;">
       <div class="card-body">
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           1.我們威博在線娛樂致力為客戶保護隱私並提供一個最安全的遊戲平臺，我們在此網站搜集的資料將會為您提供最卓越的服務，我們不會出賣或租賃您的個人資料給第三方，客戶所提供的個人資料均經過SSL128加密技術處理，並儲存在安全的、非公開的作業系統，對於有機會接觸客戶的個人資料的協助夥伴也必需遵守我們訂立的隱私保密規則。
           <br /><br />
           2.您需要保管好您的帳號和密碼安全。不得允許任何其他人或協力廠商，包括任何未成年人使用或重複使用您的帳戶進行任何網站訪問及投注操作。本公司將有權拒絕支付由此產生的任何獎勵或獎金。您將獨自為協力廠商在帳戶中產生的所有損失負責。
@@ -35,12 +35,12 @@
         </div>
 
         <div class="text-primary mb-1">相關規則</div>
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           請仔細閲讀以下您與威博娛樂城有關的法律條款。請仔細閲讀並確保您能完全理解其內容。如果您對您條款約束的權利和義務有任何疑問，請向您所屬法律管轄區域內的法律顧問尋求說明。
         </div>
 
         <div class="text-primary mb-1">一般條款和規則</div>
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           在註冊使用《規則與條款》涵蓋的威博
           (統稱為＂威博＂，＂9ibet.net＂或＂網站＂)服務之前，請您確認您已年滿18歲或以上，您代表並保證您已閲讀，並充分理解和同意接受並遵守這些規則與條款。如果您不希望接受以下規則與條款，您絶不能登記和開立帳戶，您將無法訪問遊戲軟體和得到相應服務。
           <br /><br />
@@ -53,14 +53,14 @@
         </div>
 
         <div class="text-primary mb-1">協議</div>
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           此協議涵蓋您和我們之間的各項相關協議，這些協議與您使用娛樂場玩真實貨幣遊戲或虛擬貨幣遊戲及其它遊戲相關。 <br /><br />
           威博所有的產品信息，網站註冊，及提供的任何服務都在接受此《規則與條款》的前提之下。 <br /><br />
           遊戲規則會在威博.net、軟體及網站中的其它部分列出，其中包括但不限於介紹玩法的規則、錦標賽和所有適用於特定遊戲、事件、錦標賽的其它規則，並且所有這些規則都歸併和包含在本協議規定的條款和條件中。
         </div>
 
         <div class="text-primary mb-1">法律要求</div>
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           只有當您達到所居住國家法律規定的法定年齡，才能使用威博娛樂城和威博.net網站。 <br /><br />
           如果您未滿 18 歲，在任何情況下均不得使用威博娛樂城和威博.net網站。 <br /><br />
           有些法律管轄區並未聲明在線賭博的合法性，而有些則明確規定在線賭博為非法。我們並未企圖讓法律禁止區域內的任何人使用娛樂場和網站。威博娛樂城和威博.net網站的可用性並不能解釋為我們提供或鼓勵您在任何國家（包括法律禁止的國家）內使用威博娛樂城和威博.net網站。在適用法律所禁止的任何地方，均不得使用威博娛樂城和威博.net網站。<br /><br />
@@ -70,7 +70,7 @@
         </div>
 
         <div class="text-primary mb-1">帳戶的使用條款</div>
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           如果會員的帳戶有任何問題， 威博有權暫停會員的帳戶，直到得出結果。任何爭端必須以書面形式提出並說明的日期，時間和詳細的爭端和通過電子郵件（威博）將採取一切合理步驟對待會員的爭議，直到通過調查，解決一切爭端。
           <br /><br />
           威博有理由在任何時候暫停或者取消您的帳戶，恕不另行通知。當取消您的帳戶餘額時，您的帳號仍有餘額，餘額將通過您最初選擇的提款方式退還給您。同時威博保留權利清空或沒收您威博娛樂城帳戶中的任何獎金或權益。
@@ -87,7 +87,7 @@
         </div>
 
         <div class="text-primary mb-1">玩家應遵守服務使用者守則</div>
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           不得以任何非遊戲所附程式、或任何更改原始程式及系統上的資料、數值、封包、鎖定與解除鎖定之系統設定…等手段進行遊戲（包括涉及的任何遊戲）。 <br /><br />
           禁止公開或私下傳播任何存在並可利用的遊戲Bug，請在發現該類問題時立即向官方反應。 <br /><br />
           「不公平優勢」應包括但不限於：使用者利用公司或任何與協力廠商相關的軟體服務（包括涉及的任何遊戲）的錯誤，漏洞，失誤； <br />
@@ -105,7 +105,7 @@
         </div>
 
         <div class="text-primary mb-1">下注規定, 接受並確認下注</div>
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           玩家帳戶 <br />
           玩家需存款後方可進行投注。若發現玩家未有成功存款或成功轉帳，其帳戶投注將視為無效。 <br /><br />
           確認賭注 <br />
@@ -121,7 +121,7 @@
         </div>
 
         <div class="text-primary mb-1">投注</div>
-        <div class="fs-7 mb-3" style="color:#626262">
+        <div class="fs-7 mb-3 text-gray62">
           最低投注<br />
           最低投注，取決於不同的遊戲。適用於所有遊戲。
         </div>
