--- a/pages/reason_bet.html
+++ b/pages/reason_bet.html
@@ -25,10 +25,10 @@
     <div class="card mt-3 w-100 mb-5" style="width: 18rem;">
       <div class="card-body">
         <div class="text-primary mb-1">年齡限制</div>
-        <div class="fs-7 mb-3" style="color:#626262">我們的遊戲規則不允許任何未滿18歲的人士向我們投注或領獎。如果您未滿18歲，請馬上退出網站。</div>
+        <div class="fs-7 mb-3 text-gray62">我們的遊戲規則不允許任何未滿18歲的人士向我們投注或領獎。如果您未滿18歲，請馬上退出網站。</div>
 
         <div class="text-primary mb-1">家長控制</div>
-        <div class="fs-7 mb-2" style="color:#626262">
+        <div class="fs-7 mb-2 text-gray62">
           對於家裡有未成年人士的客戶，我們鼓勵他們安裝保護兒童軟體，來限制未成年家庭成員接觸成人或賭博網站。此外，我們也確保我們的廣告和促銷宣傳活動並非以未成年人士為物件
         </div>
 
