--- a/pages/info_detail.html
+++ b/pages/info_detail.html
@@ -1,46 +1,52 @@
 <!doctype html>
 <html lang="zh-tw">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS -->
-    <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-    <title>HOMIE - 訊息詳情</title>
-  </head>
-  <body>
-    <!-- title -->
-    <div class="title d-flex container-fluid bg-dark text-white">
-        <a class="col-4 d-block text-white text-decoration-none" href="info_list.html"><img class="rotateY" src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
-        <div class="col-4 text-nowrap"><h2 class="fs-5 mb-0 text-center">訊息詳情</h2></div>
-    </div><!-- title end -->
-    <div class="container">
-        <!-- list -->
-        <div class="card bg-secondary mb-1">
-            <div class="card-body px-3 position-relative">
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="fs-5 mb-1 text-primary fw-bold">公告消息</div>
-                    <div class="fs-8 text-muted mb-2">03-29 18:33:24</div>
-                </div>
-                <div class="fs-8 mb-4">尊敬的會員：
-                    您好，您在30天內沒有修改登入密碼，為了您的帳戶安全，建議您及時登入帳戶進行修改。
-                    <br>
-                    修改密哪步驟如下：
-                    <br>
-                    1.  文字文字文字文字文字文字文…
-                    2  文字文字文字文字文字文字文字文字文字
-                    3 文字文字文字文字文字文字文字文
-                    <br>
-                    定期修改密碼有利於帳戶安全，感謝您的理解和支持！
-                </div>
-                <div class="text-end fs-7">平台運營團隊敬上</div>
-            </div>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS -->
+  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <title>HOMIE - 訊息詳情</title>
+</head>
+
+<body>
+  <!-- title -->
+  <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header">
+    <a class="back-icon" href="info_list.html"><img src="../assets/img/arrow_right_gray.svg"
+        alt="arrow_right_white"></a>
+    <h2 class="fs-6 mb-0 text-center">
+      訊息詳情
+    </h2>
+  </div>
+  <!-- title end -->
+  <div class="container mt-2 pb-5">
+    <!-- list -->
+    <div class="card mb-1">
+      <div class="card-body px-3 position-relative">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="fs-5 mb-1 text-gray2e fw-bold">公告消息</div>
         </div>
-        <!-- list end-->
+        <div class="fs-8 mb-5 text-gray62">尊敬的會員：
+          您好，您在30天內沒有修改登入密碼，為了您的帳戶安全，建議您及時登入帳戶進行修改。
+          <br>
+          修改密哪步驟如下：
+          <br>
+          1. 文字文字文字文字文字文字文…
+          2 文字文字文字文字文字文字文字文字文字
+          3 文字文字文字文字文字文字文字文
+          <br>
+          定期修改密碼有利於帳戶安全，感謝您的理解和支持！
+        </div>
+        <div class="text-end fs-8 text-gray62">平台運營團隊敬上</div>
+      </div>
     </div>
-    <div class="mb-2"></div>
+    <!-- list end-->
+  </div>
+  <div class="mb-2"></div>
 
-    <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  </body>
+  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
