feat: Done add value history

--- a/pages/game_record_history.html
+++ b/pages/game_record_history.html
@@ -95,9 +95,9 @@
     <!-- 日期選擇 -->
     <div class="collapse my-2 mt-0" id="collapseTime" data-bs-parent="#accordion">
 
-      <div class="row row-cols-4 g-2 light-gray-btns">
+      <div class="row row-cols-4 g-2 light-gray-btns time-filter-btns">
         <div class="w-100 fs-8 form-label">時間搜尋</div>
-        <div class="d-grid"><button class="btn btn-gray text-info" type="button">今日</button></div>
+        <div class="d-grid"><button class="btn btn-gray text-info active" type="button">今日</button></div>
         <div class="d-grid"><button class="btn btn-gray text-info" type="button">昨日</button></div>
         <div class="d-grid"><button class="btn btn-gray text-info" type="button">本週</button></div>
         <div class="d-grid"><button class="btn btn-gray text-info" type="button">上週</button></div>
