--- a/pages/transe_point.html
+++ b/pages/transe_point.html
@@ -116,7 +116,7 @@
             <img src="../assets/img/wallet.svg" alt="">
             <div class="ms-1">主帳戶點數</div>
           </div>
-          <div class="me-1">$ 1,234,567.00</div>
+          <div class="me-1 text-primary fw-bolder">$ 1,234,567.<span class="fs-7">00</span></div>
         </div>
       </div>
       <!-- 主帳戶點數 end-->
