perf: index page style

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div>5. 測試</div>
       </div>
       <div class="btn-group">
-        <button class="btn btn-info btn-sm dropdown-toggle rounded-pill" type="button" data-bs-toggle="modal"
+        <button class="btn btn-primary btn-sm dropdown-toggle rounded-pill" type="button" data-bs-toggle="modal"
           data-bs-target="#info_detail">更多</button>
       </div>
     </div>
@@ -68,8 +68,8 @@
     <div class="container">
       <div class="row py-1 justify-content-between align-items-center">
         <div class="col-6">
-          <div class="fs-7">您還未登入</div>
-          <div class="fs-8 text-muted">登入/註冊後查看更多訊息</div>
+          <div class="fs-7 text-black-33">您還未登入</div>
+          <div class="fs-8 text-gray95">登入/註冊後查看更多訊息</div>
         </div>
         <div class="d-flex flex-row badge_btns">
           <div class="start_btn fs-8 align-middle" data-bs-toggle="modal" data-bs-target="#login">登入</div>
@@ -154,13 +154,13 @@
   <div class="qa mb-3 py-2 mt-1 text-center">
     <img src="./assets/img/qa-title.svg" alt="" srcset="" class="mb-3">
     <div class="qa-wrap">
-      <div class="qa-item" data-bs-toggle="modal" data-bs-target="#qa">如何選擇安全線上娛樂城，判別黑網詐騙?</div>
-      <div class="qa-item" data-bs-toggle="modal" data-bs-target="#qa">威博值得玩嗎?是不是詐騙?</div>
-      <div class="qa-item" data-bs-toggle="modal" data-bs-target="#qa">什麼是流水(洗瑪)?什麼是返利?</div>
-      <div class="qa-item" data-bs-toggle="modal" data-bs-target="#qa">威博會不會出金?延遲出金怎麼辦?</div>
-      <div class="qa-item" data-bs-toggle="modal" data-bs-target="#qa">首儲後該如何提款?</div>
-      <div class="qa-item" data-bs-toggle="modal" data-bs-target="#qa">一次搞懂威博優惠攻略</div>
-      <div class="qa-item" data-bs-toggle="modal" data-bs-target="#qa">流水該如何計算，返利該如何計算?</div>
+      <div class="qa-item text-black-4a" data-bs-toggle="modal" data-bs-target="#qa">如何選擇安全線上娛樂城，判別黑網詐騙?</div>
+      <div class="qa-item text-black-4a" data-bs-toggle="modal" data-bs-target="#qa">威博值得玩嗎?是不是詐騙?</div>
+      <div class="qa-item text-black-4a" data-bs-toggle="modal" data-bs-target="#qa">什麼是流水(洗瑪)?什麼是返利?</div>
+      <div class="qa-item text-black-4a" data-bs-toggle="modal" data-bs-target="#qa">威博會不會出金?延遲出金怎麼辦?</div>
+      <div class="qa-item text-black-4a" data-bs-toggle="modal" data-bs-target="#qa">首儲後該如何提款?</div>
+      <div class="qa-item text-black-4a" data-bs-toggle="modal" data-bs-target="#qa">一次搞懂威博優惠攻略</div>
+      <div class="qa-item text-black-4a" data-bs-toggle="modal" data-bs-target="#qa">流水該如何計算，返利該如何計算?</div>
     </div>
   </div>
   <!-- QA end -->
@@ -168,35 +168,35 @@
   <!-- 登入後資訊 目前隱藏 TODO:hide-->
   <div class="mb-2 py-2">
     <div class="container">
-      <div class="row py-1 justify-content-between align-items-center">
-        <div class="col-6">
+      <div class="d-flex py-1 justify-content-between align-items-center">
+        <div class="me-auto">
           <div class="d-flex flex-row align-items-center">
-            <a class="d-block me-2" href="/pages/account.html">
+            <a class="d-block me-1" href="/pages/account.html">
               <img src="assets/img/vip-level-1.png" style="width:36px" alt="vip_level">
             </a>
             <div data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">
-              <div class="fs-8 text-primary">AAAAA01</div>
-              <div class="fs-7 arrow-down">$777,777.00</div>
+              <div class="fs-14 text-primary">AAAAA01</div>
+              <div class="arrow-down text-black-33">$777,777.00</div>
             </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="">
           <div class="d-flex flex-row justify-content-end">
-            <a class="me-3 text-center text-white text-decoration-none" href="/pages/add_value.html">
+            <a class=" text-center text-white text-decoration-none" href="/pages/add_value.html">
               <div class="d-flex flex-column justify-content-end">
-                <img style="margin-bottom:-12px" src="assets/img/add_value.png" alt="add_value">
+                <img style="margin-bottom:-10px" src="assets/img/add_value.png" alt="add_value">
                 <span class="fs-8 lh-sm align-text-bottom text-primary">儲值</span>
               </div>
             </a>
-            <a class="me-3 text-center text-white text-decoration-none" href="/pages/transe_point.html">
+            <a class=" text-center text-white text-decoration-none" href="/pages/transe_point.html">
               <div class="d-flex flex-column justify-content-end">
-                <img style="margin-bottom:-12px" src="assets/img/transe.png" alt="transe">
+                <img style="margin-bottom:-10px" src="assets/img/transe.png" alt="transe">
                 <span class="fs-8 lh-sm align-text-bottom text-primary">轉點</span>
               </div>
             </a>
             <a class="text-center text-white text-decoration-none" href="/pages/auction.html">
               <div class="d-flex flex-column justify-content-end">
-                <img style="margin-bottom:-12px" src="assets/img/auction_icon.png" alt="">
+                <img style="margin-bottom:-10px" src="assets/img/auction_icon.png" alt="">
                 <span class="fs-8 lh-sm align-text-bottom text-primary">拍賣</span>
               </div>
             </a>
